--- a/index.html
+++ b/index.html
@@ -5,14 +5,59 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Password Generator</title>
+
+  <!-- Add Bootstrap CDN -->
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+
+  <!-- Main Stylesheet -->
+  <link rel="stylesheet" href="style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
+  <div class="container">
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Password Generator</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Sign Up <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About<span class="sr-only"></span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">My Passwords</a>
+          </li>
+        </ul>
+      </div>
+      <button class="btn btn-primary">Log In</button>
+    </nav> <!-- End nav -->
+  </div> <!-- End container -->
 
-  <button>Click to generate password</button>
-  <h5>Your password is:</h5>
-  <p id="password"></p>
+    <!-- Jumbotron -->
+    <div class="jumbotron text-center">
+      <h1 class="display-4">Random Password Generator</h1>
+      <p class="lead">Easily create and store secure passwords. Click below to create account and begin.
+      Or create a password below and save to your favourite passport</p>
+      <p class="lead">
+        <a class="btn btn-primary btn-lg" href="#" role="button">Create Account</a>
+      </p>
+    </div> <!-- End Jumbotron -->
 
+  <div class="container">
+    <!-- Password Generator -->
+    <div class="text-center">
+      <button class="btn btn-primary my-4" id="password-btn">Click to generate password</button>
+      <h5>Your password is:</h5>
+      <p id="password"></p>
+      <button class="btn btn-secondary my-4">Copy Password</button>
+    </div> <!-- End Password Generator -->
+
+  </div><!-- End container -->
   <script src="app.js"></script>
 
 </body>
