--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     </div> <!-- End Password Generator -->
 
   </div><!-- End container -->
+  <footer class="text-center">&copy 2017 <a href="https://github.com/donatron" target="_blank">Don Macarthur</a></footer>
   <script src="app.js"></script>
 
 </body>
