--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link href="https://fonts.googleapis.com/css?family=Righteous|Roboto" rel="stylesheet">
 
   <!-- Main Stylesheet -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/stylesheets/style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
@@ -64,7 +64,6 @@
 
   </div><!-- End container -->
   <footer class="text-center">&copy 2017 <a href="https://github.com/donatron" target="_blank">Don Macarthur</a></footer>
-  <script src="app.js"></script>
-
+  <script src="../scripts/main.js"></script>
 </body>
 </html>
