--- a/client/public/index.html
+++ b/client/public/index.html
@@ -58,6 +58,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="./scripts/main.js"></script>
+    <script src="../src/scripts/main.js"></script>
   </body>
 </html>
