--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
@@ -65,6 +65,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="../src/scripts/main.js"></script>
+    <!-- <script src="../src/scripts/main.js"></script> -->
   </body>
 </html>
